--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^8.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
+    "react-bootstrap-range-slider": "^3.0.2",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
     "react-router": "^5.2.1",
