--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react-bootstrap-range-slider": "^3.0.2",
     "react-dom": "^17.0.2",
     "react-dotenv": "^0.1.3",
+    "react-icons": "^4.2.0",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
+    "uuid": "^3.4.0",
     "web-vitals": "^1.0.1",
     "zustand": "^3.5.10"
   },
