--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-uuid": "^1.0.2",
     "styled-components": "^5.3.1",
     "uuid": "^3.4.0",
     "web-vitals": "^1.0.1",
